--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-PORT=5000
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-ENV="development"
+DATABASE_URL=
+ENV=
+PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
