--- a/api/.gitignore
+++ b/api/.gitignore
@@ -33,3 +33,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Prisma
+prisma/.env
+prisma/dev.db
+prisma/dev.db-journal
+prisma/migrations
+
+.env
