--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "^2.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.5.2",
+    "bcrypt": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
